basic html and css started

--- a/Index.html
+++ b/Index.html
@@ -4,21 +4,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="./assets/css/reset.css">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./assets/javascript/app.js"></script>
+
+    <title>Chick-Fil-A Simulation</title>
 </head>
 
 <body>
-    <div>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
+<h1>welcome to Chick-Fil-A</h1>
+
+    <div id="all-machines">
+        <div id="mach-container">
+            <h1>Machine 1</h1>
+            <div id="machines">
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Filet</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+            </div>
+
+            <div>
+                <h2>Current Timer</h2>
+                <div id="current1"></div>
+            </div>
+        </div>
+
+        <div id="mach-container">
+            <h1>Machine 2</h1>
+            <div id="machines">
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Filet</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+            </div>
+
+            <div>
+                <h2>Current Timer</h2>
+            </div>
+        </div>
+
+        <div id="mach-container">
+            <h1>Machine 3</h1>
+            <div id="machines">
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Filet</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+            </div>
+
+            <div>
+                <h2>Current Timer</h2>
+            </div>
+        </div>
+
+        <div id="mach-container">
+            <h1>Machine 4</h1>
+            <div id="machines">
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Filet</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
+                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+            </div>
+
+            <div>
+                <h2>Current Timer</h2>
+            </div>
+        </div>
     </div>
-    
-    <div>
-        <button type="button" onclick="alert('You pressed the button!')">Click me!</button>
+
+    <h1>Grills</h1>
+    <div id="grills">
+        <button id="grill-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+        <button id="grill-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+    </div>
+
+    <h1>Fries</h1>
+    <div id="fries">
+        <button id="fry-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+        <button id="fry-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+    </div>
+
+    <h1>Expiration Timers</h1>
+    <div id="expiration">
+        <button id="exp-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
     </div>
 
 </body>
