timers on first button of each machine

--- a/Index.html
+++ b/Index.html
@@ -22,80 +22,83 @@
         <div id="mach-container">
             <h1>Machine 1</h1>
             <div id="machines">
-                <button id="fillet" type="button">Fillet</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+                <button id="fillet1" type="button">Fillet</button>
+                <button id="mach-button" type="button" >Nugg</button>
+                <button id="mach-button" type="button" >Strips</button>
+                <button id="mach-button" type="button" >Brk Fil</button>
+                <button id="mach-button" type="button" >:45</button>
             </div>
 
             <div>
                 <h2>Current Timer</h2>
-                <div> time left <span id="current1"></snap></div>
+                <div> time left <span id="current1"></span></div>
             </div>
         </div>
 
         <div id="mach-container">
             <h1>Machine 2</h1>
             <div id="machines">
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Fillet</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+                <button id="fillet2" type="button">Fillet</button>
+                <button id="mach-button" type="button" >Nugg</button>
+                <button id="mach-button" type="button" >Strips</button>
+                <button id="mach-button" type="button" >Brk Fil</button>
+                <button id="mach-button" type="button" >:45</button>
             </div>
 
             <div>
                 <h2>Current Timer</h2>
+                <div> time left <span id="current2"></span></div>
             </div>
         </div>
 
         <div id="mach-container">
             <h1>Machine 3</h1>
             <div id="machines">
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Fillet</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+                <button id="fillet3" type="button">Fillet</button>
+                <button id="mach-button" type="button" >Nugg</button>
+                <button id="mach-button" type="button" >Strips</button>
+                <button id="mach-button" type="button" >Brk Fil</button>
+                <button id="mach-button" type="button" >:45</button>
             </div>
 
             <div>
                 <h2>Current Timer</h2>
+                <div> time left <span id="current3"></span></div>
             </div>
         </div>
 
         <div id="mach-container">
             <h1>Machine 4</h1>
             <div id="machines">
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Fillet</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Nugg</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Strips</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">Brk Fil</button>
-                <button id="mach-button" type="button" onclick="alert('You pressed the button!')">:45</button>
+                <button id="fillet4" type="button">Fillet</button>
+                <button id="mach-button" type="button" >Nugg</button>
+                <button id="mach-button" type="button" >Strips</button>
+                <button id="mach-button" type="button" >Brk Fil</button>
+                <button id="mach-button" type="button" >:45</button>
             </div>
 
             <div>
                 <h2>Current Timer</h2>
+                <div> time left <span id="current4"></span></div>
             </div>
         </div>
     </div>
 
     <h1>Grills</h1>
     <div id="grills">
-        <button id="grill-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button id="grill-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+        <button id="grill-button" type="button" >Click me!</button>
+        <button id="grill-button" type="button" >Click me!</button>
     </div>
 
     <h1>Fries</h1>
     <div id="fries">
-        <button id="fry-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
-        <button id="fry-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+        <button id="fry-button" type="button" >Click me!</button>
+        <button id="fry-button" type="button" >Click me!</button>
     </div>
 
     <h1>Expiration Timers</h1>
     <div id="expiration">
-        <button id="exp-button" type="button" onclick="alert('You pressed the button!')">Click me!</button>
+        <button id="exp-button" type="button" >Click me!</button>
     </div>
 
 </body>
