added timers to the rest of the buttons on all machines

--- a/Index.html
+++ b/Index.html
@@ -22,27 +22,27 @@
         <div id="mach-container">
             <h1>Machine 1</h1>
             <div id="machines">
-                <button id="fillet1" type="button">Fillet</button>
-                <button id="mach-button" type="button" >Nugg</button>
-                <button id="mach-button" type="button" >Strips</button>
-                <button id="mach-button" type="button" >Brk Fil</button>
-                <button id="mach-button" type="button" >:45</button>
+                <button id="fillet1" class="fillet" type="button">Fillet</button>
+                <button id="nug1" class="nug" type="button" >Nugg</button>
+                <button id="strip1" class="strips" type="button" >Strips</button>
+                <button id="brkfillet1" class="brkfil" type="button">Brk Fil</button>
+                <button id="45s1" class="45s" type="button" >:45</button>
             </div>
 
             <div>
                 <h2>Current Timer</h2>
-                <div> time left <span id="current1"></span></div>
+                <div>time left <span id="current1"></span></div>
             </div>
         </div>
 
         <div id="mach-container">
             <h1>Machine 2</h1>
             <div id="machines">
-                <button id="fillet2" type="button">Fillet</button>
-                <button id="mach-button" type="button" >Nugg</button>
-                <button id="mach-button" type="button" >Strips</button>
-                <button id="mach-button" type="button" >Brk Fil</button>
-                <button id="mach-button" type="button" >:45</button>
+                <button id="fillet2" class="fillet" type="button">Fillet</button>
+                <button id="nug2" class="nug" type="button" >Nugg</button>
+                <button id="strip2" class="strips" type="button" >Strips</button>
+                <button id="brkfillet2" class="brkfil" type="button">Brk Fil</button>
+                <button id="45s2" class="45s" type="button" >:45</button>
             </div>
 
             <div>
@@ -54,11 +54,11 @@
         <div id="mach-container">
             <h1>Machine 3</h1>
             <div id="machines">
-                <button id="fillet3" type="button">Fillet</button>
-                <button id="mach-button" type="button" >Nugg</button>
-                <button id="mach-button" type="button" >Strips</button>
-                <button id="mach-button" type="button" >Brk Fil</button>
-                <button id="mach-button" type="button" >:45</button>
+                <button id="fillet3" class="fillet" type="button">Fillet</button>
+                <button id="nug3" class="nug" type="button" >Nugg</button>
+                <button id="strip3" class="strips" type="button" >Strips</button>
+                <button id="brkfillet3" class="brkfil" type="button">Brk Fil</button>
+                <button id="45s3" class="45s" type="button" >:45</button>
             </div>
 
             <div>
@@ -71,10 +71,10 @@
             <h1>Machine 4</h1>
             <div id="machines">
                 <button id="fillet4" type="button">Fillet</button>
-                <button id="mach-button" type="button" >Nugg</button>
-                <button id="mach-button" type="button" >Strips</button>
-                <button id="mach-button" type="button" >Brk Fil</button>
-                <button id="mach-button" type="button" >:45</button>
+                <button id="nug4" class="nug" type="button" >Nugg</button>
+                <button id="strip4" class="strips" type="button" >Strips</button>
+                <button id="brkfillet4" class="brkfil" type="button">Brk Fil</button>
+                <button id="45s4" class="45s" type="button" >:45</button>
             </div>
 
             <div>
