--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <h1 id="title">Welcome to
-    <img width="100px" id="logo" src="/assets/images/chick-fil-a-png-logo-photo-4843.png">
+    <img width="100px" id="logo" src="./assets/images/chick-fil-a-png-logo-photo-4843.png">
     Simulator</h1>
 
     <div id="all-machines">
